Change program class

--- a/index.html
+++ b/index.html
@@ -1,19 +1,171 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="utf-8">
-      <title>Wyzwanie</title> 
-      <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-      <div class="hero">
-          <h1>Mike Dooley</h1>
-      </div>
-      <div class="info">
-          <h2>Nie bój się iść, dokąd nigdy nie poszedłeś i robić to,</h2>
-          <p>czego nigdy nie robiłeś, ponieważ obie te rzeczy</p>
-          <h3>są niezbędne byś mógł mieć to czego nigdy</h3>
-          <p>nie miałeś i zostać tym, kim nigdy nie byłeś</p>
-       </div>
-  </body>
-</html> 
+    <head>
+        <meta charset="utf-8">b
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Design Agency</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <nav class="navigation">
+            <div class="container">
+                <ul>
+                    <li>
+                       <a href="#">about</a>
+                       <ul>
+                          <li>
+                              <a href="#">team</a>
+                          </li>
+                          <li>
+                              <a href="#">values</a>
+                          </li>
+                       </ul>
+                    </li>    
+                    <li>
+                       <a href="#">what we do</a>
+                    </li>
+                    <li>
+                       <a href="#">projects</a>
+                    </li>   
+                    <li>
+                       <a href="#">contact</a>
+                    </li>
+                </ul>
+            </div> 
+        </nav>
+        <header class="splash">
+            <div class="splash-inner">        
+                <h1 class="page-title"> hello,<br> we are <span>creatively</span></h1>
+                <h2 class="page-subtitle">build brands and products to bring big ideas into life</h2>
+                <a href="#usługi" class="btn btn-one">see our work</a>
+            </div>
+        </header>
+        <section class="our-services">
+            <div class="container">
+                <h2 class="container-title" >our services</h2>
+                <div class="wrapper">
+                    <div class="box">
+                        <h3 class="box-title">design</h3>
+                        <p>Corbitur ornare</p>
+                        <span class="number">1</span>
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie diam laoreet nisl consectetur, vel elementum nunc bibendum.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
+                        <a href="#" class="btn btn-two">read more</a>
+                    </div>
+                    <div class="box">
+                        <h3 class="box-title">code</h3>
+                        <p>Cras vel commodo</p>
+                        <span class="number">2</span>
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molesie diam Iaoreet nisl consectetur, vel elementum nunc bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
+                        <a href="#" class="btn btn-three">read more</a> 
+                    </div>
+                    <div class="box">
+                        <h3 class="box-title">marketing</h3>
+                        <p>Donec fringilla</p>
+                        <span class="number">3</span>
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molesie diam Iaoreet nisl consectetur, vel elementum nunc bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
+                        <a href="#" class="btn btn-four">read more</a>
+                    </div>
+                </div>
+            </div>    
+        </section>
+        <section class="our-work">
+	        <div class="container">
+		       <h2 class="container-title">our work</h2>
+			   <div class="wrapper">
+				  <div class="box">
+				     <div class="work-image">
+	                     <img src="https://i.postimg.cc/kMLd6mLW/pexels-iva-mus-kic-691710.jpg" alt= "white and grey tiles">      
+					</div>
+					<div class="box-description">
+				    	<h3 class="box-title">Ut rhoncus</h3>
+					    <p> "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+					    <p>Vivamus suscipit.</p>
+						<a href="#" class="btn btn-five">read more</a>
+					</div>
+				</div>
+				<div class="box">
+				    <div class="box-image">
+				        <img src="https://i.postimg.cc/3N4cPMHk/pexels-david-bartus-3601972.jpg" alt="Pattern">
+				    </div>
+				    <div class="box-description">
+				        <h3 class="box-title">Suspendisse sit</h3>
+				        <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p> 
+				        <p>Vivamus suscipit</p>
+				        <a href="#" class="btn btn-five">read more</a>
+				    </div>
+				 </div>
+				 <div class="box">
+				    <div class="box-image">
+				        <img src="https://i.postimg.cc/SxMDqL5v/pexels-laker-6156528.jpg" alt="Grain of wood">   
+				    </div>
+			        <div class="box-description">
+				        <h3 class="box-title"> Ut rhoncus</h3>
+				        <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+				        <p> Vivamus suscipit</p>
+				        <a href="#" class="btn btn-five">read more</a>
+				    </div>   
+			     </div>
+			     <div class="box">
+			         <div class="box-image">
+			            <img src="https://i.postimg.cc/hjK8DC7s/pexels-madison-inouye-1382393.jpg" alt="Photo of leaves">   
+			         </div>
+			         <div class="box-description">
+			             <h3 class="box-title">Ut rhoncus</h3> 
+			             <p>"Neque porro quiquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p> 
+			             <p>Vivamus suscipit</p>
+			             <a href="#" class="btn btn-five">read more</a>
+	                 </div>
+	             </div>    
+	         </div>         
+         </div>      
+     </section>
+     <section class="form">
+         <div class="container">
+             <h2 class="container-title">contact us</h2>
+             <div class="wrapper">
+                <form class="box box-form">
+                     <div>
+                         <label>If you have a question, you can leave a message</label>
+                         <input type="text" placeholder="Your name">
+                         <input type="email" placeholder="Your email">
+                         <input type="text" placeholder="Subject">
+                         <textarea placeholder="Type your message here"></textarea>
+                         <input class="btn btn-one" type="submit" value="submit"/>
+                    </div>
+                </form>
+                <div class="box address">
+                    <h3>sale specialist</h3>
+                    <span>Mary Brown</span>
+                    <h3>adress</h3>
+                    <address>
+                    222 Browning Street<br>
+                    Cortland<br>
+                    35071 New York
+                    <address>
+                    <h3>phone</h3>
+                    <a href="">555-444-123</a>
+                </div>
+             </div>
+          </div>
+     </section>
+     <footer>
+         <ul>
+            <li>
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li> 
+            <li>
+               <a href="#"><i class="fab fa-instagram"></i></a>
+                   
+            </li>
+            <li>
+               <a href="#"><i class="fab fa-behance"></i></a>
+            </li>
+          </ul>
+      </footer>
+      <script> </script>
+      <script src="scripts/main.js"></script>
+       </body>
+</html>
+
